fix: fix tool_indexation Safari CSS issue where long select options are overlapped

--- a/tools/tool_indexation/css/tool_indexation.less
+++ b/tools/tool_indexation/css/tool_indexation.less
@@ -68,6 +68,7 @@
 					max-width: 20rem;
 					min-width: 7rem;
 					text-overflow: ellipsis;
+					overflow: hidden;
 
 					@media screen and (max-width: @width_break_point_0) {
 						// max-width: unset;
